# making_sense_of_parsers

./: Pipfile  README.md  fifth.py  fifth_test.py  first.py  fourth.py  fourthb.py  new.py  one_per.py  pyproject.toml  second.py  third.py
.github/workflows/: pythonpackage.yml
parsimonious_dice/: __init__.py  cli.py  cmd.py  dice.py  dice_visitor.py  grammar.py
tests/: cli_test.py  dice_visitor_test.py
