[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "parsimonious_dice"
author = "Jonathan Stott"
author-email = "jonathan.stott@gmail.com"
home-page = "https://github.com/namelessjon/making_sense_of_parsers"
requires= ["parsimonious"]
requires-python= ">=3.7"

[scripts]
parsimonious_dice = "parsimonious_dice:cli"
